--- a/glass/glass/glass.csproj
+++ b/glass/glass/glass.csproj
@@ -77,6 +77,10 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Screens\GameClothes.cs" />
+    <Compile Include="Screens\GameClothes.Designer.cs">
+      <DependentUpon>GameClothes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Screens\GamePrepositions.cs" />
     <Compile Include="Screens\GamePrepositions.Designer.cs">
       <DependentUpon>GamePrepositions.cs</DependentUpon>
