--- a/glass/glass/glass.csproj
+++ b/glass/glass/glass.csproj
@@ -85,6 +85,10 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Screens\GameFruits.cs" />
+    <Compile Include="Screens\GameFruits.Designer.cs">
+      <DependentUpon>GameFruits.cs</DependentUpon>
+    </Compile>
     <Compile Include="Screens\GamePrepositions.cs" />
     <Compile Include="Screens\GamePrepositions.Designer.cs">
       <DependentUpon>GamePrepositions.cs</DependentUpon>
@@ -115,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Screens\GameFruits.resx">
+      <DependentUpon>GameFruits.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\GamePrepositions.resx">
       <DependentUpon>GamePrepositions.cs</DependentUpon>
