--- a/glass/glass/glass.csproj
+++ b/glass/glass/glass.csproj
@@ -71,6 +71,10 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Screens\GameClothes.cs" />
+    <Compile Include="Screens\GameClothes.Designer.cs">
+      <DependentUpon>GameClothes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Screens\GameFarger.cs" />
     <Compile Include="Screens\GameFarger.Designer.cs">
       <DependentUpon>GameFarger.cs</DependentUpon>
