Signed-off-by: mr3d <Axel@.(none)>

--- a/glass/glass/glass.csproj
+++ b/glass/glass/glass.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Screens\GameFruits.cs" />
     <Compile Include="Screens\GameFruits.Designer.cs">
       <DependentUpon>GameFruits.cs</DependentUpon>
+	</Compile>
     <Compile Include="Screens\GameClothes.cs" />
     <Compile Include="Screens\GameClothes.Designer.cs">
       <DependentUpon>GameClothes.cs</DependentUpon>
@@ -125,6 +126,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\GameFruits.resx">
       <DependentUpon>GameFruits.cs</DependentUpon>
+	</EmbeddedResource>
     <EmbeddedResource Include="Screens\GameClothes.resx">
       <DependentUpon>GameClothes.cs</DependentUpon>
     </EmbeddedResource>
