Signed-off-by: unknown <ds930619@.gavle.se>

--- a/glass/glass/glass.csproj
+++ b/glass/glass/glass.csproj
@@ -71,6 +71,10 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Screens\GameClothes.cs" />
+    <Compile Include="Screens\GameClothes.Designer.cs">
+      <DependentUpon>GameClothes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Screens\GameFarger.cs" />
     <Compile Include="Screens\GameFarger.Designer.cs">
       <DependentUpon>GameFarger.cs</DependentUpon>
@@ -109,6 +113,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Screens\GameClothes.resx">
+      <DependentUpon>GameClothes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\GameFarger.resx">
       <DependentUpon>GameFarger.cs</DependentUpon>
